--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 body {
   text-align: center;
+  padding: 80px;
+  background-image: url("/images/pizzatoon.png");
+  background-color: white;
+}
+.d-flex {
+  justify-content: space-evenly;
+}
+footer {
+  padding: 50px;
 }
